--- a/css/style.css
+++ b/css/style.css
@@ -3,18 +3,25 @@
     background-size: cover;
     font-family: 'Quicksand', sans-serif;
 }
+.sec-1 {
+    margin: 0 0 0 0;
+}
 .landing-heading-container {
-    padding: 10% 3%;
+    padding: 5% 5% 12% 0 ;    
 
 }
 .landing-heading-col {
-    padding: 3rem 0 0 0;
+    padding: 10% 0 0 20%;
+    width: 20rem;
+
 }
 .landing-heading {
-    font-size: 2.5rem;
+    padding: 0 0 5% 15%;
+    width: 52rem;
+    font-size: 2.9rem;
     color: white;
 }
 .isometric-vector {
-    width: 130%;
-    padding: ;
+    width: 90%;
+    padding: 0 0 0 3%;
 }
