--- a/css/style.css
+++ b/css/style.css
@@ -25,3 +25,23 @@
     width: 90%;
     padding: 0 0 0 3%;
 }
+
+/* second section */
+#what-we-do {
+    font-family: 'Quicksand', sans-serif;
+    text-align: center;
+    padding: 0 0 10% 0;
+}
+.wwd-heading {
+    text-align: center;
+    margin: 0;
+    align-content: center;
+}
+#what-we-do .card{
+    padding: 5%;
+    height: 100%;
+    box-shadow: 5px 5px 20px 1px rgba(0, 0, 0, 0.281);
+}
+#what-we-do .card p{
+    padding: 10% 0 0 0;
+}
