--- a/css/style.css
+++ b/css/style.css
@@ -107,3 +107,20 @@
     font-size: 2.5rem;
     padding: 0 3rem 0 0;
 }
+
+
+
+
+
+
+
+/* 
+
+Refactiring your code
+
+--Eliminate duplicates 
+--Make sure everythng is structured properly
+--Make sure everything is readable and the next person will have no problem understanding your code
+--Less but better.
+
+*/
