--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 #Header {
-    background-image: url("/Media/LBL-background.png");
+    background-image: url("/Media/sec1-background.png");
     background-size: cover;
     font-family: 'Quicksand', sans-serif;
 }
@@ -51,7 +51,7 @@
 /* Third-section */
 
 #testimonials {
-    background-image: url(/Media/LDL-background2.png);
+    background-image: url(/Media/sec3-background.png);
     background-size: cover;
     text-align: center;
 }
