--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 #Header {
-    background-image: url("/Media/sec1-background.png");
+    background-image: url(/Media/sec1-background.png);
     background-size: cover;
     font-family: 'Quicksand', sans-serif;
 }
